# sendingnetwork-unreal-sdk

./: README.md  SdnUnreal.uproject  auth.txt
Config/: DefaultEngine.ini  DefaultGame.ini
Content/: BP_ExampleChatWidget.uasset  ChatSession.uasset  EmptyMap.umap  EmptyMap_HLOD0_Instancing.uasset  MemberEntry.uasset  MessageEntry.uasset  user.uasset
Plugins/SdnClient/: SdnClient.uplugin
Plugins/SdnClient/Source/SdkSrc/: CMakeLists.txt
Plugins/SdnClient/Source/SdkSrc/cmake/: SDNClientConfig.cmake.in
Plugins/SdnClient/Source/SdkSrc/examples/: CMakeLists.txt  cmake_install.cmake  crypto_bot.cpp  media_downloader.cpp  memberstats.cpp  online_backup_exporter.cpp  room_feed.cpp  simple_bot.cpp
Plugins/SdnClient/Source/SdkSrc/include/: sdn.hpp
Plugins/SdnClient/Source/SdkSrc/include/sdn/: common.hpp  errors.hpp  events.hpp  events_impl.hpp  identifiers.hpp  lightweight_error.hpp  log.hpp  pushrules.hpp  requests.hpp  secret_storage.hpp  user_interactive.hpp
Plugins/SdnClient/Source/SdkSrc/include/sdn/events/: aliases.hpp  avatar.hpp  canonical_alias.hpp  collections.hpp  common.hpp  create.hpp  encrypted.hpp  encryption.hpp  event_type.hpp  guest_access.hpp  history_visibility.hpp  join_rules.hpp  member.hpp  name.hpp  pinned_events.hpp  policy_rules.hpp  power_levels.hpp  presence.hpp  reaction.hpp  redaction.hpp  server_acl.hpp  spaces.hpp  tag.hpp  tombstone.hpp  topic.hpp  unknown.hpp  voip.hpp  widget.hpp
Plugins/SdnClient/Source/SdkSrc/include/sdn/events/account_data/: direct.hpp  fully_read.hpp  ignored_users.hpp
Plugins/SdnClient/Source/SdkSrc/include/sdn/events/ephemeral/: receipt.hpp  typing.hpp
Plugins/SdnClient/Source/SdkSrc/include/sdn/events/messages/: audio.hpp  elementeffect.hpp  emote.hpp  file.hpp  image.hpp  location.hpp  notice.hpp  text.hpp  unknown.hpp  video.hpp
Plugins/SdnClient/Source/SdkSrc/include/sdn/events/mscs/: image_packs.hpp
Plugins/SdnClient/Source/SdkSrc/include/sdn/events/nheko_extensions/: event_expiry.hpp  hidden_events.hpp
Plugins/SdnClient/Source/SdkSrc/include/sdn/responses/: capabilities.hpp  common.hpp  create_room.hpp  crypto.hpp  device.hpp  empty.hpp  login.hpp  media.hpp  members.hpp  messages.hpp  notifications.hpp  profile.hpp  public_rooms.hpp  register.hpp  sync.hpp  turn_server.hpp  users.hpp  version.hpp  well-known.hpp
Plugins/SdnClient/Source/SdkSrc/include/sdnclient/: utils.hpp
Plugins/SdnClient/Source/SdkSrc/include/sdnclient/crypto/: client.hpp  ecdsa.hpp  objects.hpp  types.hpp  utils.hpp
Plugins/SdnClient/Source/SdkSrc/include/sdnclient/http/: client.hpp  client_impl.hpp  errors.hpp
Plugins/SdnClient/Source/SdkSrc/lib/: log.cpp  utils.cpp
Plugins/SdnClient/Source/SdkSrc/lib/crypto/: client.cpp  ecdsa.cpp  encoding.cpp  types.cpp  utils.cpp
Plugins/SdnClient/Source/SdkSrc/lib/http/: client.cpp
Plugins/SdnClient/Source/SdkSrc/lib/structs/: common.cpp  errors.cpp  events.cpp  identifiers.cpp  pushrules.cpp  requests.cpp  secret_storage.cpp  user_interactive.cpp
Plugins/SdnClient/Source/SdkSrc/lib/structs/events/: aliases.cpp  avatar.cpp  canonical_alias.cpp  collections.cpp  common.cpp  create.cpp  encrypted.cpp  encryption.cpp  guest_access.cpp  history_visibility.cpp  join_rules.cpp  member.cpp  name.cpp  pinned_events.cpp  policy_rules.cpp  power_levels.cpp  presence.cpp  reaction.cpp  redaction.cpp  server_acl.cpp  spaces.cpp  tag.cpp  tombstone.cpp  topic.cpp  unknown.cpp  voip.cpp  widget.cpp
Plugins/SdnClient/Source/SdkSrc/lib/structs/events/account_data/: direct.cpp  fully_read.cpp  ignored_users.cpp
Plugins/SdnClient/Source/SdkSrc/lib/structs/events/ephemeral/: receipt.cpp  typing.cpp
Plugins/SdnClient/Source/SdkSrc/lib/structs/events/messages/: audio.cpp  elementeffect.cpp  emote.cpp  file.cpp  image.cpp  notice.cpp  text.cpp  unknown.cpp  video.cpp
Plugins/SdnClient/Source/SdkSrc/lib/structs/events/mscs/: image_packs.cpp
Plugins/SdnClient/Source/SdkSrc/lib/structs/events/nheko_extensions/: event_expiry.cpp  hidden_events.cpp
Plugins/SdnClient/Source/SdkSrc/lib/structs/responses/: capabilities.cpp  common.cpp  create_room.cpp  crypto.cpp  device.cpp  empty.cpp  login.cpp  media.cpp  members.cpp  messages.cpp  notifications.cpp  profile.cpp  public_rooms.cpp  register.cpp  sync.cpp  turn_server.cpp  users.cpp  version.cpp  well-known.cpp
Plugins/SdnClient/Source/SdkSrc/tests/: client_api.cpp  connection.cpp  crypto.cpp  device.cpp  e2ee.cpp  errors.cpp  events.cpp  identifiers.cpp  media_api.cpp  meson.build  messages.cpp  pushrules.cpp  requests.cpp  responses.cpp  test_helpers.hpp  utils.cpp  voip.cpp
Plugins/SdnClient/Source/SdkSrc/tests/fixtures/responses/: sync_with_crypto.json
Plugins/SdnClient/Source/SdnClient/: SdnClient.Build.cs
Source/: SdnUnreal.Target.cs  SdnUnrealEditor.Target.cs
Source/SdnUnreal/: SdnUnreal.Build.cs  SdnUnreal.cpp
Source/SdnUnreal/Private/: ExampleChatWidget.cpp  ExampleChatWidget.h
Source/SdnUnreal/Private/Models/: ChatSession.h  RoomEvent.h  UserProfile.h
gtad/: gtad.yaml
src/api/application-service/definitions/: location.hpp  user.hpp
src/api/csapi/: admin.hpp  administrative_contact.hpp  appservice_room_directory.hpp  content-repo.cpp  content-repo.hpp  create_room.hpp  event_context.hpp  filter.hpp  inviting.hpp  joining.hpp  keys.hpp  leaving.hpp  list_public_rooms.hpp  login.cpp  login.hpp  old_sync.hpp  openid.hpp  profile.hpp  pusher.hpp  registration.cpp  registration.hpp  room_initial_sync.hpp  room_state.hpp  rooms.hpp  sso_login_redirect.hpp  third_party_lookup.hpp  third_party_membership.hpp  users.hpp  versions.hpp  wellknown.cpp  wellknown.hpp
src/base/: basejob.cpp  kazvevents.hpp
src/client/: client.cpp  client.hpp  did.cpp  did.hpp  encrypted-file.hpp  sdk.hpp  sdn.cpp  sdn.hpp
src/client/actions/: auth.cpp
src/client/room/: room.hpp
src/crypto/: aes-256-ctr.hpp  crypto.cpp
src/examples/basic/: main.cpp
src/tests/: basejobtest.cpp  crypto-test.cpp  kazvjobtest.cpp  tests.hpp
src/tests/client/: content-test.cpp  discovery-test.cpp  paginate-test.cpp  profile-test.cpp  sync-test.cpp
(+139 files in other folders)
